feat: add image upload server with Express, Multer, and CORS support
- Implemented a new Express server in index.js to handle image uploads.
- Configured Multer for file storage with a 10 MB limit and custom filename.
- Set up CORS to allow requests from any origin.
- Added a POST route for uploading images, responding with success message and file details.
- Updated package.json to include dependencies: express, multer, and cors.
- Created pnpm-lock.yaml for dependency management.

--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "multer": "^2.0.1"
+  }
 }
